# mandelbrot

./: .clang-format  CMakeLists.txt
shaders/: mandelbrot.frag  mandelbrot100.frag
src/: main.cpp
